<resources>
    <string name="app_name">Eventures Android App</string>
    <string name="buttonConnect">✓ Connect</string>
    <string name="buttonLogin">➔ Login</string>
    <string name="buttonRegister">✓ Register</string>
    <string name="buttonAdd">+ Add</string>
    <string name="buttonReload">⟳ Reload</string>

    <string name="connectTitle">Connect to Eventures API:</string>
    <string name="apiUrlHint">API URL here...</string>
    <string name="defaultUrl">http://10.0.2.2:4000/api/</string>

    <string name="textViewId">Event ID:</string>
    <string name="textViewName">Name:</string>
    <string name="textViewPlace">Place:</string>
    <string name="textViewStart">Start:</string>
    <string name="textViewEnd">End:</string>
    <string name="textViewTickets">Tickets:</string>
    <string name="textViewPrice">Price:</string>
    <string name="textViewOwner">Owner:</string>

    <string name="loginTitle">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="registerTitle">Register</string>
    <string name="usernameHint">Your username...</string>
    <string name="emailHint">Your email...</string>
    <string name="passwordHint">Your password...</string>
    <string name="confirmPasswordHint">Your confirm password...</string>
    <string name="firstNameHint">Your first name...</string>
    <string name="lastNameHint">Your last name...</string>

    <string name="createEventTitle">Create a New Event</string>
    <string name="addEventName">Name</string>
    <string name="addEventPlace">Place</string>
    <string name="addEventStart">Start</string>
    <string name="addEventEnd">End</string>
    <string name="addEventTotalTickets">Total Tickets</string>
    <string name="buttonCancel">✖ Cancel</string>
    <string name="buttonCreate">✓ Create</string>
    <string name="eventNameHint">Event Name</string>
    <string name="eventPlaceHint">Event Place</string>
    <string name="eventPriceHint">Price Per Ticket</string>
    <string name="endDateHint">2025-06-06</string>
    <string name="startDateHint">2025-05-05</string>
    <string name="timeHint">12:00</string>
    <string name="ticketsHint">100</string>
    <string name="priceHint">10.00</string>

    <string name="maxNameLength">50</string>
    <string name="maxPlaceLength">70</string>
    <string name="maxTicketsLength">4</string>
    <string name="maxPriceLength">7</string>
    <string name="maxURLLength">40</string>
    <string name="maxUsernameLength">15</string>
    <string name="maxPasswordLength">20</string>
    <string name="maxEmailLength">30</string>
    <string name="maxFirstNameLength">15</string>
    <string name="maxLastNameLength">15</string>
</resources>
