<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context="eventures.ui.AddEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCreateNewEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextApiUrl"
            android:text="@string/createEventTitle"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextName"
            android:text="@string/addEventName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/eventNameHint"
            android:inputType="text"
            android:textColorHint="#B6B0B0"
            android:textSize="18sp"
            android:maxLength="@string/maxNameLength"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/labelPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextPlace"
            android:text="@string/addEventPlace"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPlace"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="top"
            android:hint="@string/eventPlaceHint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="5"
            android:textColorHint="#B6B0B0"
            android:maxLength="@string/maxPlaceLength"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextStartDate"
            android:text="@string/addEventStart"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextStartDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/startDateHint"
                android:textColorHint="#B6B0B0"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editTextStartTime"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/timeHint"
                android:textColorHint="#B6B0B0"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextEndDate"
            android:text="@string/addEventEnd"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextEndDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/endDateHint"
                android:textColorHint="#B6B0B0"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/editTextEndTime"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/timeHint"
                android:textColorHint="#B6B0B0"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewTickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextTickets"
            android:text="@string/addEventTotalTickets"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTickets"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/ticketsHint"
            android:inputType="number"
            android:textColorHint="#B6B0B0"
            android:maxLength="@string/maxTicketsLength"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextPrice"
            android:text="@string/eventPriceHint"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/priceHint"
            android:inputType="numberDecimal"
            android:nextFocusForward="@+id/buttonCreate"
            android:textColorHint="#B6B0B0"
            android:maxLength="@string/maxPriceLength"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/buttonCancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonCancel"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/buttonCreate"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusForward="@+id/buttonCancel"
                android:text="@string/buttonCreate"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>