<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        tools:context="eventures.ui.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextApiUrl"
                android:text="@string/loginTitle"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextUsername"
                android:text="@string/username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/usernameHint"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#B6B0B0"
                android:textSize="18sp"
                android:maxLength="@string/maxUsernameLength"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextPassword"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="top"
                android:hint="@string/passwordHint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/buttonLogin"
                android:textColorHint="#B6B0B0"
                android:maxLength="@string/maxPasswordLength"
                tools:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/buttonCancel"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonCancel"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/buttonConfirmLogin"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:nextFocusForward="@+id/buttonCancel"
                    android:text="@string/buttonLogin"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>