<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="115dp"
            android:layout_height="15dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelEventId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewId"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewEventId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewPlace"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewTickets"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewPrice"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewOwner"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

</TableLayout>